<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/colorGray"
        android:gravity="center">

        <net.tigerlight.dad.util.CustomTextViewBold
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TAG_I_AM_ON"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_20sdp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/fragment_iamok_llMain"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/_20sdp"
        android:visibility="visible">

        <net.tigerlight.dad.util.CustomTextViewSemiBold
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fragment_create_pin_tv_title"
            android:textAlignment="center"
            android:layout_marginVertical="@dimen/_20sdp"
            android:textColor="@color/color_black"
            android:textSize="@dimen/font_25sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/fragment_iamok_llMain_etNewPin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/drawable_grey_rounded_margin_et"
                android:hint="@string/TAGE_NEW_PIN"
                android:inputType="numberPassword"
                android:maxLength="6"
                android:padding="@dimen/_10sdp"
                android:textColor="@color/color_black"
                android:textSize="@dimen/font_20sp"
                android:layout_centerVertical="true"
                android:textStyle="bold" />
            <ImageView
                android:id="@+id/fragment_iamok_llMain_etNewPinIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/_10sdp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_eye_off" />
        </RelativeLayout>

        <EditText
            android:id="@+id/fragment_iamok_llMain_etReenterPin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/drawable_grey_rounded_margin_et"
            android:hint="@string/TAG_RE_ENTER_PIN"
            android:layout_marginVertical="@dimen/_10sdp"
            android:inputType="numberPassword"
            android:maxLength="6"
            android:padding="@dimen/_10sdp"
            android:textColor="@color/color_black"
            android:textSize="@dimen/font_20sp"
            android:drawableEnd="@drawable/ic_eye_off"
            android:textStyle="bold" />

        <Button
            android:id="@+id/fragment_iamok_llMain_tvSavePin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@drawable/button_bg_orange"
            android:textColor="@color/colorWhite"
            android:text="@string/TAG_SAVE_PIN"
            android:textAllCaps="false"
            android:textSize="@dimen/font_20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/fragment_iamok_llFirst"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingHorizontal="@dimen/_20sdp"
        android:orientation="vertical"
        android:visibility="gone">

        <net.tigerlight.dad.util.CustomTextViewSemiBold
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/TAGE_ENTER_YOUR_PIN"
            android:textColor="@color/color_black"
            android:textAlignment="center"
            android:textSize="@dimen/_17sdp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/fragment_iamok_etPin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/drawable_grey_rounded_margin_et"
                android:hint="@string/TAGE_PIN"
                android:inputType="numberPassword"
                android:maxLength="4"
                android:layout_marginVertical="@dimen/_15sdp"
                android:padding="@dimen/_12sdp"
                android:textAlignment="viewStart"
                android:layout_centerVertical="true"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/font_20sp"
                android:textStyle="bold" />
            <ImageView
                android:id="@+id/fragment_iamok_etPinIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/_10sdp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_eye_off" />
        </RelativeLayout>


        <Button
            android:id="@+id/fragment_iamok_tvSendIamokMsg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_bg_green"
            android:text="@string/TAGE_SEND_OK_MSG"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <TextView
                android:id="@+id/fragment_iamok_tvResetPin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:text="@string/TAG_RESEt_PIN"
                android:textColor="@color/color_blue"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/fragment_iamok_tvForgotPin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:text="@string/TAG_FORGOT_PIN"
                android:textColor="@color/color_blue"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/fragment_iamok_llSecond"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/_20sdp"
        android:visibility="gone">

        <net.tigerlight.dad.util.CustomTextViewSemiBold
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginVertical="@dimen/_20sdp"
            android:text="@string/TAG_RESEt_PIN"
            android:textColor="@color/color_black"
            android:textSize="@dimen/font_25sp" />

        <EditText
            android:id="@+id/fragment_iamok_etOldPin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/drawable_grey_rounded_margin_et"
            android:hint="@string/TAG_ENTER_OLD_TEMP_PIN"
            android:inputType="numberPassword"
            android:maxLength="4"
            android:padding="@dimen/_12sdp"
            android:textColor="@color/color_black"
            android:textSize="@dimen/font_20sp"
            android:textStyle="bold" />
        <EditText
            android:id="@+id/fragment_iamok_etNewPin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_10sdp"
            android:background="@drawable/drawable_grey_rounded_margin_et"
            android:hint="@string/new_pin"
            android:inputType="numberPassword"
            android:maxLength="4"
            android:padding="@dimen/_10sdp"
            android:textColor="@color/color_black"
            android:textSize="@dimen/font_20sp"
            android:textStyle="bold" />
        <EditText
            android:id="@+id/fragment_iamok_etReEnterPin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/drawable_grey_rounded_margin_et"
            android:hint="@string/TAG_RE_ENTER_PIN"
            android:inputType="numberPassword"
            android:maxLength="4"
            android:padding="@dimen/_10sdp"
            android:textColor="@color/color_black"
            android:textSize="@dimen/font_20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/fragment_iamok_tvSavePin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginVertical="@dimen/_15sdp"
            android:text="@string/save_pin"
            android:textColor="@color/colorWhite"
            android:background="@drawable/button_bg_orange"
            android:textAllCaps="false"
            android:textSize="@dimen/_20sdp" />

        <net.tigerlight.dad.util.CustomTextViewSemiBold
            android:id="@+id/fragment_iamok_tvCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/cancel_ul"
            android:textColor="@color/color_blue"
            android:textSize="@dimen/_15sdp"
        />

    </LinearLayout>

</LinearLayout>
