<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/fragment_login_to_your_account_iv_logo"
        android:layout_width="match_parent"
        android:layout_height="128dp"
        android:scaleType="fitCenter"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_10sdp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/img_logo_white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:gravity="bottom"
        android:orientation="vertical"
        android:padding="@dimen/_30sdp"
    >

        <net.tigerlight.dad.util.CustomTextViewBold
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/TAG_forgot_pwd"
            android:padding="@dimen/_10sdp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:layout_marginVertical="@dimen/_20sdp"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_20sdp"
        />
        <EditText
            android:id="@+id/fragment_forgot_password_et_email_id"
            style="@style/style_et_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:gravity="start"
            android:hint="@string/fragment_forgot_password_et_email_hint"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:maxWidth="200dp"
            android:autofillHints="emailAddress"
            android:textSize="@dimen/_13sdp"
            android:textAlignment="viewStart"
            tools:ignore="TextFields" />

        <Button
            android:id="@+id/fragment_forgot_password_tv_submit"
            android:layout_width="match_parent"
            android:textAllCaps="false"
            android:background="@drawable/button_bg_orange"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:maxWidth="300dp"
            android:padding="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold"
            android:text="@string/TAG_RESETPASSWORD_TXT" />

        <net.tigerlight.dad.util.CustomTextViewSemiBold
            android:id="@+id/fragment_forgot_password_tv_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_arrow_back_ios_24"
            android:text="@string/back"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:textAllCaps="false"
            android:layout_marginBottom="@dimen/_20sdp"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/font_15sp"
        />
    </LinearLayout>
</LinearLayout>